--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,8 @@
 
     <link rel="alternate" hreflang="en" href="http://www.kaabo.network">
     <link rel="alternate" hreflang="zh" href="http://zh.kaabo.network">
+    <link rel="alternate" hreflang="ar" href="http://ar.kaabo.network">
+    <link rel="alternate" hreflang="hi" href="http://hi.kaabo.network">
     <script type="text/javascript" src="https://cdn.weglot.com/weglot.min.js"></script>
     <script>
         Weglot.initialize({
