--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -3,7 +3,7 @@
       <%= simple_form_for([@theme, @comment]) do |f| %>
       <%= f.input :content, as: :text %>
       <%= f.input :date, :as => :hidden, :input_html => { :value => Time.now } %>
-      <%= f.submit %>
+      <%= f.submit class:"btn btn-warning"%>
     <% end %>
   </div>
 </div>
