--- a/app/views/themes/new.html.erb
+++ b/app/views/themes/new.html.erb
@@ -5,7 +5,7 @@
       <%= f.input :title %>
       <%= f.input :content %>
       <%= f.input :date, :as => :hidden, :input_html => { :value => Time.now } %>
-      <%= f.submit %>
+      <%= f.submit class:"btn btn-warning"%>
     <% end %>
   </div>
  </div>
