--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,7 +3,7 @@
       <%= simple_form_for(@user) do |f| %>
       <%= f.input :username %>
       <%= f.input :avatar, as: :file %>
-      <%= f.submit %>
+      <%= f.submit class:"btn btn-warning"%>
     <% end %>
   </div>
 </div>
